# cpp-channel

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
bench/src/cpp/: README.md  event.cpp  sieve.cpp
bench/src/go/sieve/: sieve.go
doc/: Doxyfile.in
include/: channel  channel.h
src/: channel.cpp
test/: channel_test.cpp
